--- a/fabricjschess/practice2.html
+++ b/fabricjschess/practice2.html
@@ -1,230 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Timer</title>
+  <title>Fabric.js Chess Game</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
-    .controls {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    .timer {
-      margin-bottom: 10px;
-      font-size: 20px;
-      color: white;
-      display: flex;
-      justify-content: space-around;
-      width: 100%;
-    }
     canvas {
-      border: 2px solid #000;
-    }
-    button {
-      margin: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      border: 1px solid black;
     }
   </style>
 </head>
 <body>
-  <div class="controls">
-    <button onclick="startRestartGame()">Start/Restart Game</button>
-    <button onclick="toggleTTS()">
-      <span id="tts-status">Turn off TTS</span>
-    </button>
+  <h1>Fabric.js Chess Game</h1>
+  <button id="startRestart">Start/Restart Game</button>
+  <div>
+    <canvas id="chessboard" width="480" height="480"></canvas>
   </div>
-  <div class="timer">
-    <div id="white-timer">White: 5:00</div>
-    <div id="black-timer">Black: 5:00</div>
-  </div>
-  <canvas id="chessboard" width="480" height="480"></canvas>
+
   <script>
     const canvas = new fabric.Canvas('chessboard');
-    const pieceImages = {
-      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-    };
-    let game = [];
-    let isWhiteTurn = true;
-    let selectedPiece = null;
-    let isTTSOn = true;
+    const squareSize = 60; // Size of each square (480px board / 8 squares)
+    const boardSize = 8;
+    let pieces = []; // Store piece objects
 
-    // Timer variables
-    let whiteTime = 300; // 5 minutes in seconds
-    let blackTime = 300;
-    let timerInterval;
-
-    function updateTimers() {
-      const formatTime = (time) => {
-        const minutes = Math.floor(time / 60);
-        const seconds = time % 60;
-        return `${minutes}:${seconds.toString().padStart(2, '0')}`;
-      };
-      document.getElementById('white-timer').textContent = `White: ${formatTime(whiteTime)}`;
-      document.getElementById('black-timer').textContent = `Black: ${formatTime(blackTime)}`;
-    }
-
-    function startTimer() {
-      clearInterval(timerInterval);
-      timerInterval = setInterval(() => {
-        if (isWhiteTurn) {
-          whiteTime--;
-          if (whiteTime <= 0) {
-            clearInterval(timerInterval);
-            alert("Black wins by timeout!");
-          }
-        } else {
-          blackTime--;
-          if (blackTime <= 0) {
-            clearInterval(timerInterval);
-            alert("White wins by timeout!");
-          }
-        }
-        updateTimers();
-      }, 1000);
-    }
-
-    function speak(text) {
-      if (isTTSOn) {
-        const utterance = new SpeechSynthesisUtterance(text);
-        window.speechSynthesis.speak(utterance);
-      }
-    }
-
+    // Initialize the chessboard
     function drawBoard() {
-      console.log("Drawing the board...");
-      const tileSize = 60;
-      canvas.clear(); // Clear the canvas before drawing
-      for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 8; j++) {
-          const isLight = (i + j) % 2 === 0;
+      canvas.clear();
+      for (let row = 0; row < boardSize; row++) {
+        for (let col = 0; col < boardSize; col++) {
+          const isWhite = (row + col) % 2 === 0;
           const rect = new fabric.Rect({
-            left: j * tileSize,
-            top: i * tileSize,
-            width: tileSize,
-            height: tileSize,
-            fill: isLight ? '#f0d9b5' : '#b58863',
-            selectable: false
+            left: col * squareSize,
+            top: row * squareSize,
+            width: squareSize,
+            height: squareSize,
+            fill: isWhite ? '#f0d9b5' : '#b58863',
+            selectable: false,
           });
           canvas.add(rect);
         }
       }
     }
 
-    function drawPieces() {
-      console.log("Drawing pieces...");
-      const tileSize = 60;
-      canvas.getObjects('image').forEach(obj => canvas.remove(obj));
-      for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 8; j++) {
-          const piece = game[i][j];
-          if (piece) {
-            fabric.Image.fromURL(pieceImages[piece], (img) => {
-              img.set({
-                left: j * tileSize,
-                top: i * tileSize,
-                scaleX: tileSize / img.width,
-                scaleY: tileSize / img.height,
-                hasControls: false,
-                hasBorders: false,
-                selectable: false,
-                data: { row: i, col: j, piece }
-              });
-              canvas.add(img);
-            });
-          }
+    // Create chess pieces
+    function createPieces() {
+      const piecePositions = {
+        // Initial positions: black (uppercase), white (lowercase)
+        'RNBQKBNR': 0, // Row 0 for black
+        'PPPPPPPP': 1, // Row 1 for black
+        'pppppppp': 6, // Row 6 for white
+        'rnbqkbnr': 7  // Row 7 for white
+      };
+
+      for (const [rowConfig, rowIndex] of Object.entries(piecePositions)) {
+        for (let col = 0; col < rowConfig.length; col++) {
+          const pieceChar = rowConfig[col];
+          const pieceColor = pieceChar === pieceChar.toLowerCase() ? 'white' : 'black';
+
+          const piece = new fabric.Text(pieceChar, {
+            left: col * squareSize + squareSize / 4,
+            top: rowIndex * squareSize + squareSize / 4,
+            fontSize: 40,
+            fill: pieceColor,
+            originX: 'center',
+            originY: 'center',
+            selectable: true,
+            hasControls: false,
+            pieceType: pieceChar,
+            color: pieceColor,
+          });
+
+          pieces.push(piece);
+          canvas.add(piece);
         }
       }
     }
 
-    function startRestartGame() {
-      console.log("Starting or restarting the game...");
-      game = [
-        ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-        ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-        ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-      ];
-      isWhiteTurn = true;
-      selectedPiece = null;
-      whiteTime = blackTime = 300;
-      clearInterval(timerInterval);
+    // Handle piece movement
+    function setupPieceMovement() {
+      canvas.on('object:moving', (e) => {
+        const piece = e.target;
+        const left = Math.round(piece.left / squareSize) * squareSize;
+        const top = Math.round(piece.top / squareSize) * squareSize;
+
+        piece.set({ left, top });
+      });
+
+      canvas.on('object:moved', (e) => {
+        const piece = e.target;
+
+        // TODO: Implement move validation and capturing logic
+
+        // Example TTS announcement
+        const move = `${piece.color} ${piece.pieceType} moved`;
+        speechSynthesis.speak(new SpeechSynthesisUtterance(move));
+      });
+    }
+
+    // Initialize the game
+    function startGame() {
       drawBoard();
-      drawPieces();
-      updateTimers();
-      startTimer();
-      speak("Game started. White's turn.");
+      createPieces();
+      setupPieceMovement();
     }
 
-    function toggleTTS() {
-      isTTSOn = !isTTSOn;
-      document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
-    }
-
-    canvas.on('mouse:down', (event) => {
-      const pointer = canvas.getPointer(event.e);
-      const row = Math.floor(pointer.y / 60);
-      const col = Math.floor(pointer.x / 60);
-      const piece = game[row][col];
-      if (selectedPiece) {
-        const { row: startRow, col: startCol, piece: selectedPieceType } = selectedPiece;
-        if (isValidMove(selectedPieceType, startRow, startCol, row, col)) {
-          // Move the piece
-          game[row][col] = selectedPieceType;
-          game[startRow][startCol] = '';
-          drawPieces();
-          isWhiteTurn = !isWhiteTurn;
-          speak(`${selectedPieceType.toUpperCase()} moved to ${String.fromCharCode(97 + col)}${8 - row}`);
-          speak(isWhiteTurn ? "White's turn." : "Black's turn.");
-        } else {
-          speak("Invalid move.");
-        }
-        selectedPiece = null;
-      } else if (piece && ((isWhiteTurn && piece === piece.toUpperCase()) || (!isWhiteTurn && piece === piece.toLowerCase()))) {
-        selectedPiece = { row, col, piece };
-        speak(`${piece.toUpperCase()} selected.`);
-      }
+    // Add Start/Restart functionality
+    document.getElementById('startRestart').addEventListener('click', () => {
+      startGame();
     });
 
-    function isValidMove(piece, startRow, startCol, endRow, endCol) {
-      // Basic validation for each piece type (expand as needed)
-      const rowDiff = Math.abs(endRow - startRow);
-      const colDiff = Math.abs(endCol - startCol);
-      if (piece.toLowerCase() === 'p') {
-        return (rowDiff === 1 && colDiff === 0) || (rowDiff === 2 && colDiff === 0 && startRow === (piece === piece.toLowerCase() ? 1 : 6));
-      }
-      return true; // Simplified; implement more rules here
-    }
+    // Load the board on page load
+    startGame();
   </script>
 </body>
 </html>
