--- a/fabricjschess/restart.html
+++ b/fabricjschess/restart.html
@@ -84,8 +84,6 @@
               pieceType: pieceChar.toLowerCase(),
               color: pieceChar === pieceChar.toLowerCase() ? 'black' : 'white',
               moved: false,
-              startLeft: col * squareSize,
-              startTop: rowIndex * squareSize,
             });
 
             pieces.push(img);
@@ -125,11 +123,9 @@
       const rowDiff = to.row - from.row;
       const colDiff = to.col - from.col;
 
-      if (to.row < 0 || to.row >= boardSize || to.col < 0 || to.col >= boardSize) return false;
-
       if (pieceType === 'p') {
         if (colDiff === 0 && boardState[to.row][to.col] === null) {
-          if (rowDiff === direction || (rowDiff === 2 * direction && !piece.moved && boardState[from.row + direction][from.col] === null)) {
+          if (rowDiff === direction || (rowDiff === 2 * direction && !piece.moved)) {
             return true;
           }
         }
@@ -181,14 +177,9 @@
     function setupPieceMovement() {
       canvas.on('object:moving', (e) => {
         const piece = e.target;
-        const from = getBoardPosition(piece.startLeft, piece.startTop);
-        const to = getBoardPosition(piece.left, piece.top);
-
-        if (!isValidMove(piece, from, to)) {
-          piece.left = piece.startLeft;
-          piece.top = piece.startTop;
-          canvas.renderAll();
-        }
+        const { col, row } = getBoardPosition(piece.left, piece.top);
+        piece.left = col * squareSize;
+        piece.top = row * squareSize;
       });
 
       canvas.on('object:moved', (e) => {
@@ -196,16 +187,17 @@
         const from = getBoardPosition(piece.startLeft, piece.startTop);
         const to = getBoardPosition(piece.left, piece.top);
 
-        if (isValidMove(piece, from, to)) {
+        if (!isValidMove(piece, from, to)) {
+          piece.left = piece.startLeft;
+          piece.top = piece.startTop;
+        } else {
           updateBoardState(piece, from, to);
           piece.startLeft = piece.left;
           piece.startTop = piece.top;
+
           if (boardState[to.row][to.col]) {
             canvas.remove(boardState[to.row][to.col]);
           }
-        } else {
-          piece.left = piece.startLeft;
-          piece.top = piece.startTop;
         }
 
         canvas.renderAll();
